# NinjaKiwi-API

./: .flake8  .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  changelog-config.json  mkdocs.yml  pyproject.toml  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dev.yml  release.yml
docs/: api.md  installation.md  usage.md
ninjakiwi_api/: __init__.py  main.py
ninjakiwi_api/API/: __init__.py
ninjakiwi_api/API/BTD6/: __init__.py  function.py
ninjakiwi_api/API/BTDB2/: __init__.py  function.py
ninjakiwi_api/FUNCTIONS/: __init__.py
ninjakiwi_api/FUNCTIONS/ERROR/: __init__.py  function.py
ninjakiwi_api/FUNCTIONS/FETCH/: __init__.py  function.py  model.py
ninjakiwi_api/api/: __init__.py
ninjakiwi_api/api/BTDB2/: __init__.py
tests/: __init__.py  test_app.py  test_btd6.py  test_btdb2.py  test_error.py  test_fetch.py  test_main.py  test_model.py
