[tool]
[tool.poetry]
name = "ninjakiwi_api"
version = "1.2.0a0"
homepage = "https://github.com/GustavoSchip/ninjakiwi-api"
description = "NinjaKiwi API (Open Data) for Python! (My first library)"
authors = [
    "Gustavo Schip <gustavoschip@proton.me>",
]
maintainers = [
    "Gustavo Schip <gustavoschip@proton.me>",
]
readme = "README.md"
license =  "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
keywords = [
    "API",
    "NinjaKiwi",
]
packages = [
    { include = "ninjakiwi_api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"

asyncio  = {version = "^3.4.3"}
aiohttp  = { version = "^3.8.1"}
black  = { version = ">=22.3,<24.0", optional = true}
isort  = { version = "5.12.0", optional = true}
flake8  = { version = "6.0.0", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^7.0.1", optional = true}
pytest-asyncio  = {version = "^0.21.1", optional = true}
pytest-cov  = { version = ">=3,<5", optional = true}
pytest-mock  = { version = "^3.11.1", optional = true}
tox  = { version = ">=3.24.5,<5.0.0", optional = true}
virtualenv  = { version = "^20.13.1", optional = true}
pip  = { version = ">=22.0.3,<24.0.0"}
twine  = { version = ">=3.8,<5.0", optional = true}
pre-commit = {version = ">=2.17,<4.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
tornado = {version = "^6.2", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
